--- a/Oldboardgames/Oldboardgames.vcxproj
+++ b/Oldboardgames/Oldboardgames.vcxproj
@@ -160,6 +160,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source\ソース ファイル\BaseScene.cpp" />
+    <ClCompile Include="Source\ソース ファイル\GetKey.cpp" />
     <ClCompile Include="Source\ソース ファイル\ISceneChanger.cpp" />
     <ClCompile Include="Source\ソース ファイル\Main.cpp" />
     <ClCompile Include="Source\ソース ファイル\SceneManager.cpp" />
@@ -167,6 +168,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\ヘッダー ファイル\BaseScene.h" />
+    <ClInclude Include="Source\ヘッダー ファイル\GetKey.h" />
     <ClInclude Include="Source\ヘッダー ファイル\ISceneChanger.h" />
     <ClInclude Include="Source\ヘッダー ファイル\SceneManager.h" />
     <ClInclude Include="Source\ヘッダー ファイル\Task.h" />
