--- a/Oldboardgames/Oldboardgames.vcxproj
+++ b/Oldboardgames/Oldboardgames.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="Source\ソース ファイル\GetKey.cpp" />
     <ClCompile Include="Source\ソース ファイル\ISceneChanger.cpp" />
     <ClCompile Include="Source\ソース ファイル\Main.cpp" />
+    <ClCompile Include="Source\ソース ファイル\OtherInterface.cpp" />
     <ClCompile Include="Source\ソース ファイル\SceneManager.cpp" />
     <ClCompile Include="Source\ソース ファイル\Title.cpp" />
   </ItemGroup>
@@ -170,6 +171,7 @@
     <ClInclude Include="Source\ヘッダー ファイル\BaseScene.h" />
     <ClInclude Include="Source\ヘッダー ファイル\GetKey.h" />
     <ClInclude Include="Source\ヘッダー ファイル\ISceneChanger.h" />
+    <ClInclude Include="Source\ヘッダー ファイル\OtherInterface.h" />
     <ClInclude Include="Source\ヘッダー ファイル\SceneManager.h" />
     <ClInclude Include="Source\ヘッダー ファイル\Task.h" />
     <ClInclude Include="Source\ヘッダー ファイル\Title.h" />
