--- a/Oldboardgames/Oldboardgames.vcxproj.filters
+++ b/Oldboardgames/Oldboardgames.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Source\ソース ファイル\Mancala.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Source\ソース ファイル\Move.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\ヘッダー ファイル\SceneManager.h">
@@ -57,6 +60,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="Source\ヘッダー ファイル\Mancala.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\ヘッダー ファイル\Move.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
