--- a/Oldboardgames/Oldboardgames.vcxproj
+++ b/Oldboardgames/Oldboardgames.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{BA086F82-3387-490A-933C-7C0D56255808}</ProjectGuid>
+    <ProjectGuid>{8DC48E0E-84CB-4C74-8328-7ABE5E8A05B6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Oldboardgames</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
@@ -73,12 +73,10 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
-    <SourcePath>$(VC_SourcePath);</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
-    <SourcePath>$(VC_SourcePath);</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -93,13 +91,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Yudai\workspace\Library\DxLib_VC3_20f\DxLib_VC\プロジェクトに追加すべきファイル_VC用;Source\ヘッダー ファイル</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../Library/DxLib_VC3_20f/DxLib_VC/プロジェクトに追加すべきファイル_VC用;../../../Library/boost/include/boost-1_71;source/ヘッダー ファイル</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Yudai\workspace\Library\DxLib_VC3_20f\DxLib_VC\プロジェクトに追加すべきファイル_VC用</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../../../Library/DxLib_VC3_20f/DxLib_VC/プロジェクトに追加すべきファイル_VC用;../../../Library/boost/lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);ws2_32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -109,13 +108,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Yudai\workspace\Library\DxLib_VC3_20f\DxLib_VC\プロジェクトに追加すべきファイル_VC用;Source\ヘッダー ファイル</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../Library/DxLib_VC3_20f/DxLib_VC/プロジェクトに追加すべきファイル_VC用;../../../Library/boost/include/boost-1_71;source/ヘッダー ファイル</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Yudai\workspace\Library\DxLib_VC3_20f\DxLib_VC\プロジェクトに追加すべきファイル_VC用</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../../../Library/DxLib_VC3_20f/DxLib_VC/プロジェクトに追加すべきファイル_VC用;../../../Library/boost/lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);ws2_32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -127,7 +127,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Yudai\workspace\Library\DxLib_VC3_20f\DxLib_VC\プロジェクトに追加すべきファイル_VC用</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../Library/DxLib_VC3_20f/DxLib_VC/プロジェクトに追加すべきファイル_VC用;;source/ヘッダー ファイル</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -135,7 +135,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Yudai\workspace\Library\DxLib_VC3_20f\DxLib_VC\プロジェクトに追加すべきファイル_VC用</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../../../Library/DxLib_VC3_20f/DxLib_VC/プロジェクトに追加すべきファイル_VC用</AdditionalLibraryDirectories>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);ws2_32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -147,7 +148,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Yudai\workspace\Library\DxLib_VC3_20f\DxLib_VC\プロジェクトに追加すべきファイル_VC用</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../Library/DxLib_VC3_20f/DxLib_VC/プロジェクトに追加すべきファイル_VC用;;source/ヘッダー ファイル</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -155,34 +156,35 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Yudai\workspace\Library\DxLib_VC3_20f\DxLib_VC\プロジェクトに追加すべきファイル_VC用</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../../../Library/DxLib_VC3_20f/DxLib_VC/プロジェクトに追加すべきファイル_VC用</AdditionalLibraryDirectories>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);ws2_32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source\ソース ファイル\CoinManager.cpp" />
-    <ClCompile Include="Source\ソース ファイル\FPS.cpp" />
-    <ClCompile Include="Source\ソース ファイル\Move.cpp" />
-    <ClCompile Include="Source\ソース ファイル\BaseScene.cpp" />
-    <ClCompile Include="Source\ソース ファイル\Mancala.cpp" />
-    <ClCompile Include="Source\ソース ファイル\Other.cpp" />
-    <ClCompile Include="Source\ソース ファイル\Main.cpp" />
-    <ClCompile Include="Source\ソース ファイル\SceneManager.cpp" />
-    <ClCompile Include="Source\ソース ファイル\Coin.cpp" />
-    <ClCompile Include="Source\ソース ファイル\Title.cpp" />
+    <ClCompile Include="source\ソース ファイル\BaseScene.cpp" />
+    <ClCompile Include="source\ソース ファイル\Coin.cpp" />
+    <ClCompile Include="source\ソース ファイル\CoinManager.cpp" />
+    <ClCompile Include="source\ソース ファイル\fps.cpp" />
+    <ClCompile Include="source\ソース ファイル\main.cpp" />
+    <ClCompile Include="source\ソース ファイル\Mancala.cpp" />
+    <ClCompile Include="source\ソース ファイル\Move.cpp" />
+    <ClCompile Include="source\ソース ファイル\Other.cpp" />
+    <ClCompile Include="source\ソース ファイル\SceneManager.cpp" />
+    <ClCompile Include="source\ソース ファイル\Title.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\ヘッダー ファイル\CoinManager.h" />
-    <ClInclude Include="Source\ヘッダー ファイル\FPS.h" />
-    <ClInclude Include="Source\ヘッダー ファイル\Move.h" />
-    <ClInclude Include="Source\ヘッダー ファイル\BaseScene.h" />
-    <ClInclude Include="Source\ヘッダー ファイル\Mancala.h" />
-    <ClInclude Include="Source\ヘッダー ファイル\Other.h" />
-    <ClInclude Include="Source\ヘッダー ファイル\ISceneChanger.h" />
-    <ClInclude Include="Source\ヘッダー ファイル\OtherInterface.h" />
-    <ClInclude Include="Source\ヘッダー ファイル\SceneManager.h" />
-    <ClInclude Include="Source\ヘッダー ファイル\Coin.h" />
-    <ClInclude Include="Source\ヘッダー ファイル\Task.h" />
-    <ClInclude Include="Source\ヘッダー ファイル\Title.h" />
+    <ClInclude Include="source\ヘッダー ファイル\BaseScene.h" />
+    <ClInclude Include="source\ヘッダー ファイル\coin.h" />
+    <ClInclude Include="source\ヘッダー ファイル\CoinManager.h" />
+    <ClInclude Include="source\ヘッダー ファイル\fps.h" />
+    <ClInclude Include="source\ヘッダー ファイル\ISceneChanger.h" />
+    <ClInclude Include="source\ヘッダー ファイル\Mancala.h" />
+    <ClInclude Include="source\ヘッダー ファイル\Move.h" />
+    <ClInclude Include="source\ヘッダー ファイル\Other.h" />
+    <ClInclude Include="source\ヘッダー ファイル\OtherInterface.h" />
+    <ClInclude Include="source\ヘッダー ファイル\SceneManager.h" />
+    <ClInclude Include="source\ヘッダー ファイル\Task.h" />
+    <ClInclude Include="source\ヘッダー ファイル\Title.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
