--- a/Oldboardgames/Oldboardgames.vcxproj.filters
+++ b/Oldboardgames/Oldboardgames.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="source\ソース ファイル\TCP.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="source\ソース ファイル\TCP2.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\ヘッダー ファイル\BaseScene.h">
@@ -87,6 +90,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="source\ヘッダー ファイル\TCP.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="source\ヘッダー ファイル\TCP2.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
