--- a/Oldboardgames/Oldboardgames.vcxproj
+++ b/Oldboardgames/Oldboardgames.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="source\ソース ファイル\Other.cpp" />
     <ClCompile Include="source\ソース ファイル\SceneManager.cpp" />
     <ClCompile Include="source\ソース ファイル\TCP.cpp" />
+    <ClCompile Include="source\ソース ファイル\TCP2.cpp" />
     <ClCompile Include="source\ソース ファイル\Title.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -186,6 +187,7 @@
     <ClInclude Include="source\ヘッダー ファイル\SceneManager.h" />
     <ClInclude Include="source\ヘッダー ファイル\Task.h" />
     <ClInclude Include="source\ヘッダー ファイル\TCP.h" />
+    <ClInclude Include="source\ヘッダー ファイル\TCP2.h" />
     <ClInclude Include="source\ヘッダー ファイル\Title.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
