--- a/Oldboardgames/Oldboardgames.vcxproj.filters
+++ b/Oldboardgames/Oldboardgames.vcxproj.filters
@@ -45,10 +45,10 @@
     <ClCompile Include="source\ソース ファイル\Title.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="source\ソース ファイル\TCP.cpp">
+    <ClCompile Include="source\ソース ファイル\TCP2.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="source\ソース ファイル\TCP2.cpp">
+    <ClCompile Include="source\ソース ファイル\OldTCP.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -89,10 +89,10 @@
     <ClInclude Include="source\ヘッダー ファイル\Title.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="source\ヘッダー ファイル\TCP.h">
+    <ClInclude Include="source\ヘッダー ファイル\TCP2.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="source\ヘッダー ファイル\TCP2.h">
+    <ClInclude Include="source\ヘッダー ファイル\OldTCP.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
